[tool.poetry]
name = "trust"
version = "0.1.0"
description = "TRUST - Bayesian structure learner"
authors = ["Benjie Wang <benjie.wang@ucla.edu>"]
readme = "README.md"
packages=[{include="trust"}]

[tool.poetry.build]
script = 'build_cpp.py'
generate-setup-file = true


[tool.poetry.dependencies]
python = "^3.10"
causaldag = "^0.1a163"
Cython = "^0.29.36"
jax = "0.4.18"
jaxlib= "0.4.18"
matplotlib = "^3.7.2"
networkx = "^3.1"
numpy = "^1.24.4"
pandas = "^1.5.3"
plotext = "^5.2.8"
pypandoc = "^1.12"
pybind11 = "^2.8.0"
python_igraph = "^0.11.3"
PyYAML = "^6.0.1"
scikit_learn = "^1.3.0"
scipy = ">=1.6.0,<=1.12.0"
seaborn = "^0.13.0"
setuptools = "^68.2.2"
torch = "^2.1.0"
tqdm = "^4.66.1"
jupyter = "^1.0.0"

sumu = {path="oracle/gadget", develop= true}
dibs-lib = {path="oracle/dibs", develop= true}

[build-system]
requires = ["poetry-core","setuptools","pybind11"]
build-backend = "poetry.core.masonry.api"
